--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,27 +12,27 @@
   <header class="page-header">
     <a class="page-header__logo" href="index.html">
       <picture>
-        <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-        <img class="page-header__logo-img" src="img/logo-mobile.svg" alt="Логотип Cat Energy">
+          <img class="page-header__logo-img" src="img/logo-mobile.svg" width="192" height="66" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <button class="page-header__toggle toggle--nojs" type="button">
-      <span>Открыть меню</span>
-    </button>
-    <nav class="main-nav main-nav--nojs">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="index.html">Главная</a>
-        </li>
-        <li class="main-nav_item">
-          <a class="main-nav__link main-nav__link--active">Каталог продукции</a>
-        </li>
-        <li class="main-nav_item">
-          <a class="main-nav__link" href="form.html">Подбор программы</a>
-        </li>
-      </ul>
-    </nav>
+    <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="main-nav__list main-menu">
+          <li class="main-menu__item">
+            <a class="main-menu__link main-menu__link--index" href="index.html">Главная</a>
+          </li>
+          <li class="main-menu_item">
+            <a class="main-menu__link main-menu__link--index main-menu__link--active">Каталог продукции</a>
+          </li>
+          <li class="main-menu_item">
+            <a class="main-menu__link main-menu__link--index" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
   </header>
   <main class="page-main">
     <section class="catalog catalog__container">
@@ -41,7 +41,7 @@
         <li class="products__item product">
           <a class="product__img-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/chicken-small-desktop@1x.png 1x,  img/chicken-small-desktop@2x.png 2x">
+              <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x,  img/chicken-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
               <img class="product__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat energy pro 500г">
             </picture>
@@ -70,7 +70,7 @@
         <li class="products__item product">
           <a class="product__img-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+              <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
               <img class="product__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat energy pro 1000г">
             </picture>
@@ -99,7 +99,7 @@
         <li class="products__item product">
           <a class="product__img-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+              <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
               <img class="product__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat energy pro 500г">
             </picture>
@@ -128,7 +128,7 @@
         <li class="products__item product">
           <a class="product__img-link" href="href">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+              <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
               <img class="product__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat energy pro 1000г">
             </picture>
@@ -157,7 +157,7 @@
         <li class="products__item product">
           <a class="product__img-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+              <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
               <img class="product__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat energy slim 500г">
             </picture>
@@ -186,7 +186,7 @@
         <li class="products__item product">
           <a class="product__img-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+              <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
               <img class="product__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat energy slim 1000г">
             </picture>
@@ -215,7 +215,7 @@
         <li class="products__item product">
           <a class="product__img-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+              <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
               <img class="product__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat energy slim 500г">
             </picture>
@@ -283,18 +283,16 @@
         </ul>
         <div class="add-product__order-gift gift">
           <img class="gift__img" src="img/icon-gift.svg"  width="60" height="60" alt="Подарок">
-          <p class ="gift__content">Закажите все и получите чехол для кота в подарок!</p>
+          <p class ="gift__content">Закажите все<br> и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </section>
     <section class="contacts">
         <div class="contacts__header contacts__container">
-          <p class="contacts__item">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
         </div>
-        <div class="contacts__map">
-            <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
-        </div>
+        <div class="contacts__map"></div>
       </section>
   </main>
   <footer class="page-footer">
@@ -356,11 +354,11 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-          <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
-          <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
-            <svg class="copyright__logo-svg" width="60" height="80" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#444444" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
-          </a>
+            <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+            <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
+            <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
+              <svg class="copyright__logo-svg" width="40" height="46" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#444444" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+            </a>
         </div>
       </div>
   </footer>
