--- a/source/form.html
+++ b/source/form.html
@@ -14,49 +14,132 @@
       <picture>
         <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-        <img class="page-header__logo-img" src="img/logo-mobile.svg" alt="Логотип Cat Energy">
+          <img class="page-header__logo-img" src="img/logo-mobile.svg" width="192" height="66" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <button class="page-header__toggle toggle--nojs" type="button">
-      <span>Открыть меню</span>
-    </button>
-    <nav class="main-nav main-nav--nojs">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="index.html">Главная</a>
-        </li>
-        <li class="main-nav_item">
-          <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
-        </li>
-        <li class="main-nav_item">
-          <a class="main-nav__link main-nav__link--active">Подбор программы</a>
-        </li>
-      </ul>
-    </nav>
+    <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="main-nav__list main-menu">
+          <li class="main-menu__item">
+            <a class="main-menu__link main-menu__link--index" href="index.html">Главная</a>
+          </li>
+          <li class="main-menu_item">
+            <a class="main-menu__link main-menu__link--index" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-menu_item">
+            <a class="main-menu__link main-menu__link--index main-menu__link--active">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
   </header>
   <main class="page-main">
-    <h1 class="page-main__header">Подбор программы</h1>
-    <form class="page-main__form form" action="https://htmlacademy.ru/" method="POST">
-      <p class="form__content">Заполните анкету и мы подберем программу питания для вашего кота</p>
-      <ul class="form__list">
-        <li class="form__item">
-          <label class="form__label"></label>
-          <input>
-        </li>
-        <li class="form__item"></li>
-        <li class="form__item"></li>
-      </ul>
+    <form class="page-main__form form" action="https://echo.htmlacademy.ru" method="POST">
+      <h2 class="form__title form__container">Подбор программы</h2>
+      <p class="form__content form__container">Заполните анкету и мы подберем<br>программу питания для вашего кота</p>
+      <div class="form__list-wrapper">
+        <ul class="form__list form__container">
+          <li class="form__item">
+            <label class="form__label" for="form-name">имя:*</label>
+            <input class="form__input-text" type="text" placeholder="Барсик" id="form-name" name="name" required>
+          </li>
+          <li class="form__item">
+            <label class="form__label" for="form-weight">вес (кг):*</label>
+            <input class="form__input-text" type="text" placeholder="7" id="form-weight" name="weight" required>
+          </li>
+          <li class="form__item">
+            <label class="form__label" for="form-age">Возраст (лет):</label>
+            <input class="form__input-text" type="text" placeholder="7" id="form-age" name="age">
+          </li>
+        </ul>
+        <div class="form__list-border-wrapper">
+          <ul class="form__list form__list--mass form__container">
+            <li class="form__item">
+              <input class="form__input-radio visually-hidden" type="radio" id="form-thin" name="mass" value="mass-down" checked>
+              <label class="form__label form__label--radio" for="form-thin">Похудение</label>
+            </li>
+            <li class="form__item">
+              <input class="form__input-radio visually-hidden" type="radio" id="form-thick" name="mass" value="mass-up">
+              <label class="form__label form__label--radio" for="form-thick">Набор массы</label>
+            </li>
+            <li class="form__item">
+              <input class="form__input-radio visually-hidden" type="radio" id="form-advice" name="mass" value="mass-advice">
+              <label class="form__label form__label--radio" for="form-advice">Не знаю (нужен ваш совет)</label>
+            </li>
+          </ul>
+        </div>
+      </div>
+        <fieldset class="form__fieldset form__fieldset--owner">
+          <div class="form__container">
+            <h2 class="form__legend form__legend--owner">Контактные данные (владельца кота)</h2>
+            <ul class="form__list form__list--contacts">
+              <li class="form__item">
+                <label class="form__label form__label--email" for="form-email">e-mail:*</label>
+                <input class="form__input-text form__input-text--email" type="email" placeholder="kuklachev@gmail.com" id="form-email" name="email" required>
+                  <svg class="form__input-icon form__input-icon--email" width="17" height="42" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+                    <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
+                  </svg>
+              </li>
+              <li class="form__item">
+                <label class="form__label form__label--phone" for="form-phone">телефон:*</label>
+                <input class="form__input-text form__input-text--phone" type="tel" placeholder="8 (960) 900-60-90" id="form-phone" name="phone" required>
+                  <svg class="form__input-icon form__input-icon--phone" width="22" height="42" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
+                    <path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
+                    <path
+                      d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+                    c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
+                    C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
+                    C7.8,20,8.1,19.7,8.1,19.4z"/>
+                  </svg>
+              </li>
+            </ul>
+          </div>
+        </fieldset>
+        <fieldset class="form__fieldset form__fieldset--comments">
+          <div class="form__container">
+            <h2 class="form__legend form__legend--comments">Комментарий</h2>
+            <div class="form__comments-wrapper">
+              <textarea class="form__textarea" placeholder="Расскажите обо всех повадках кота" name="comments"></textarea>
+            </div>
+          </div>
+        </fieldset>
+        <fieldset class="form__fieldset">
+          <div class="form__container">
+            <h2 class="form__legend form__legend--additional">Дополнительно</h2>
+            <ul class="form__list form__list--additional">
+              <li class="form__item">
+                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-sweetener" name="sweetener" checked>
+                <label class="form__label form__label--checkbox" for="form-sweetener">Сахарозаменитель</label>
+              </li>
+              <li class="form__item">
+                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-drinkwater" name="drinkwater">
+                <label class="form__label form__label--checkbox" for="form-drinkwater">Питьевая вода</label>
+              </li>
+              <li class="form__item">
+                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-milk" name="milk">
+                <label class="form__label form__label--checkbox" for="form-milk">Молоко</label>
+              </li>
+              <li class="form__item">
+                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-vitamins" name="vitamins">
+                <label class="form__label form__label--checkbox" for="form-vitamins">Витамины</label>
+              </li>
+            </ul>
+          </div>
+        </fieldset>
+        <div class="form__fieldset-button-wrapper form__container">
+          <button class="form__button" type="submit">Отправить заявку</button>
+          <p class="form__required-notify">* — Обязательные поля</p>
+        </div>
     </form>
     <section class="contacts">
         <div class="contacts__header contacts__container">
-          <p class="contacts__item">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
         </div>
-        <div class="contacts__map">
-            <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
-        </div>
+        <div class="contacts__map"></div>
       </section>
-  </main>
+    </main>
   <footer class="page-footer">
       <div class="page-footer__container">
         <a class="page-footer__logo page-footer__logo-link">
@@ -116,14 +199,14 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-          <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
-          <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
-            <svg class="copyright__logo-svg" width="60" height="80" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#444444" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
-          </a>
+            <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+            <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
+            <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
+              <svg class="copyright__logo-svg" width="40" height="46" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#444444" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+            </a>
         </div>
       </div>
-    </footer>
+  </footer>
 </body>
 
 </html>
