--- a/source/index.html
+++ b/source/index.html
@@ -13,27 +13,29 @@
   <header class="page-header page-header--index">
     <a class="page-header__logo">
       <picture>
-        <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
         <img class="page-header__logo-img" src="img/logo-mobile.svg" width="192" height="66" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <button class="page-header__toggle toggle--nojs" type="button">
-      <span>Открыть меню</span>
-    </button>
-    <nav class="main-nav main-nav--nojs">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--index main-nav__link--active">Главная</a>
+    <nav class="page-header__nav main-nav main-nav--opened main-nav--nojs">
+      <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <ul class="main-nav__list main-menu">
+        <li class="main-menu__item">
+          <a class="main-menu__link main-menu__link--index main-menu__link--active">Главная</a>
         </li>
-        <li class="main-nav_item">
-          <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог продукции</a>
+        <li class="main-menu_item">
+          <a class="main-menu__link main-menu__link--index" href="catalog.html">Каталог продукции</a>
         </li>
-        <li class="main-nav_item">
-          <a class="main-nav__link main-nav__link--index" href="form.html">Подбор программы</a>
+        <li class="main-menu_item">
+          <a class="main-menu__link main-menu__link--index" href="form.html">Подбор программы</a>
         </li>
       </ul>
     </nav>
+
+
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Cat Energy</h1>
@@ -42,7 +44,7 @@
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__content">Занялся собой? Займись котом</p>
         <picture>
-          <source media="(min-width: 1200px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+          <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
           <img class="promo__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Продукт Cat Energy">
         </picture>
@@ -85,9 +87,11 @@
       </div>
     </section>
     <section class="example">
-        <div class="example__container">
+      <div class="example__container">
+        <div class="example__desktop-wrapper">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__content">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+          <div class="example__wrapper">
             <ul class="example__list">
               <li class="example__item example-item">
                 <p class="example-item__value">5 кг</p>
@@ -98,28 +102,45 @@
                 <p class="example-item__title">Pатрачено времени</p>
               </li>
             </ul>
-            <p class="example__price">Затраты на питание: <span class="example__price-value">15 000 руб.</span></p>
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
-                <img class="example__img example__img--before example__img--show" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Cat Energy до">
-              </picture>
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
-                <img class="example__img example__img--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x"  alt="Cat Energy после">
-              </picture>
-
+            <p class="example__price">Затраты на питание:
+              <span class="example__price-value">15 000 руб.</span>
+            </p>
+          </div>
         </div>
-      </section>
+        <div class="example__desktop-wrapper">
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+              <img class="example__img example__img--before example__img--show" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Cat Energy до">
+            </picture>
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
+              <img class="example__img example__img--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x"  alt="Cat Energy после">
+            </picture>
+            <ul class="example__btn btn-list">
+                <li class="btn-list__item">
+                  <button class="btn-list__button btn-list__button--before">Было</button>
+                </li>
+                <li class="btn-list__item">
+                  <div class="btn-list__scale">
+                    <span class="btn-list__bar"></span>
+                  </div>
+                </li>
+                <li class="btn-list__item">
+                  <button class="btn-list__button btn-list__button--after">Стало</button>
+                </li>
+            </ul>
+        </div>
+
+      </div>
+    </section>
     <section class="contacts">
       <div class="contacts__header contacts__container">
-        <p class="contacts__item">приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
       </div>
-      <div class="contacts__map">
-          <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
-      </div>
+      <div class="contacts__map"></div>
     </section>
   </main>
   <footer class="page-footer">
@@ -184,7 +205,7 @@
         <h2 class="visually-hidden">Логотип разработчика сайта</h2>
         <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
         <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
-          <svg class="copyright__logo-svg" width="60" height="80" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#444444" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+          <svg class="copyright__logo-svg" width="40" height="46" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#444444" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
         </a>
       </div>
     </div>
