--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <header class="page-header page-header--index">
+    <div class="page-header__container">
     <a class="page-header__logo">
       <picture>
         <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
@@ -35,7 +36,7 @@
       </ul>
     </nav>
 
-
+  </div>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Cat Energy</h1>
@@ -107,45 +108,45 @@
             </p>
           </div>
         </div>
-        <div class="example__desktop-wrapper">
+        <div class="example__desktop-wrapper example__before-after">
             <picture>
               <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
-              <img class="example__img example__img--before example__img--show" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Cat Energy до">
+              <img class="example__img example__img--before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Cat Energy до">
             </picture>
             <picture>
               <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
               <img class="example__img example__img--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x"  alt="Cat Energy после">
             </picture>
-            <ul class="example__btn btn-list">
-                <li class="btn-list__item">
-                  <button class="btn-list__button btn-list__button--before">Было</button>
-                </li>
-                <li class="btn-list__item">
-                  <div class="btn-list__scale">
-                    <span class="btn-list__bar"></span>
-                  </div>
-                </li>
-                <li class="btn-list__item">
-                  <button class="btn-list__button btn-list__button--after">Стало</button>
-                </li>
-            </ul>
-        </div>
 
+        </div>
+        <ul class="example__btn btn-list">
+            <li class="btn-list__item">
+              <button class="btn-list__button btn-list__button--before" type="button">Было</button>
+            </li>
+            <li class="btn-list__item">
+              <div class="btn-list__scale">
+                <span class="btn-list__bar"></span>
+              </div>
+            </li>
+            <li class="btn-list__item">
+              <button class="btn-list__button btn-list__button--after">Стало</button>
+            </li>
+        </ul>
       </div>
     </section>
-    <section class="contacts">
-      <div class="contacts__header contacts__container">
-        <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
-      </div>
-      <div class="contacts__map"></div>
-    </section>
+    <section class="contacts contacts--index">
+        <div class="contacts__header contacts__container">
+          <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
+        </div>
+        <div class="contacts__map"></div>
+      </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__container">
-      <a class="page-footer__logo page-footer__logo-link">
+      <a class="page-footer__logo page-footer__logo--link">
         <img class="page-footer__logo-img" src="img/logo-footer.svg" width="129" height="24" alt="Cat Energy">
       </a>
       <div class="page-footer__social social">
@@ -177,9 +178,6 @@
               <span class="visually-hidden">Инстаграм</span>
               <svg class="social__svg social__svg--insta" width="17" height="16" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
-           <style type="text/css">
-             .st0{fill:#231F20;}
-           </style>
            <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
               M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
            <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
@@ -205,11 +203,11 @@
         <h2 class="visually-hidden">Логотип разработчика сайта</h2>
         <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
         <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
-          <svg class="copyright__logo-svg" width="40" height="46" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#444444" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+          <svg class="copyright__logo-svg" width="40" height="46" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
         </a>
       </div>
     </div>
-             </footer>
+  </footer>
 </body>
 
 </html>
